--- a/crates/cartridge/Cargo.toml
+++ b/crates/cartridge/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "gb"
+name = "cartridge"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cpu_sm83 = { path = "../cpu_sm83" }
-cartridge = { path = "../cartridge" }
+anyhow = "1.0.66"
