--- a/crates/gb/Cargo.toml
+++ b/crates/gb/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 cpu_sm83 = { path = "../cpu_sm83" }
 cartridge = { path = "../cartridge" }
+log = "0.4.17"
+env_logger = "0.9.1"
