--- a/crates/io/Cargo.toml
+++ b/crates/io/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "cpu_sm83"
+name = "io"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log = "0.4.17"
-io = { path = "../io" }
