feat: allocate array in heap

--- a/crates/gb/Cargo.toml
+++ b/crates/gb/Cargo.toml
@@ -11,3 +11,4 @@ cartridge = { path = "../cartridge" }
 io = { path = "../io" }
 log = "0.4.17"
 env_logger = "0.9.1"
+shared = { path = "../shared" }
