--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -1,12 +1,8 @@
 [package]
-name = "cartridge"
+name = "shared"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.66"
-log = "0.4.17"
-io = { path = "../io" }
-shared = { path = "../shared" }
