--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,14 @@ members = [
   "crates/cartridge",
   "crates/io",
   "crates/shared",
-  "crates/ppu"
+  "crates/ppu",
 ]
+
+[workspace.dependencies]
+cpu_sm83 = { path = "crates/cpu_sm83" }
+cartridge = { path = "crates/cartridge" }
+ppu = { path = "crates/ppu" }
+io = { path = "crates/io" }
+shared = { path = "crates/shared" }
+log = "0.4.17"
+anyhow = "1.0.66"
