--- a/crates/cpu_sm83/Cargo.toml
+++ b/crates/cpu_sm83/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log = "0.4.17"
-io = { path = "../io" }
+log = { workspace = true }
+io = { workspace = true }
