--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
   "crates/cartridge",
   "crates/shared",
   "crates/ppu",
+  "bin/gb_app",
 ]
 resolver = "2"
 
@@ -13,5 +14,6 @@ gb_cpu_sm83 = { path = "crates/cpu_sm83" }
 gb_cartridge = { path = "crates/cartridge" }
 gb_ppu = { path = "crates/ppu" }
 gb_shared = { path = "crates/shared" }
+gb = { path = "crates/gb" }
 log = "0.4.17"
 anyhow = "1.0.66"
