--- a/crates/gb/Cargo.toml
+++ b/crates/gb/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cpu_sm83 = { path = "../cpu_sm83" }
-cartridge = { path = "../cartridge" }
-io = { path = "../io" }
-log = "0.4.17"
-env_logger = "0.9.1"
-shared = { path = "../shared" }
+gb_ppu = { workspace = true }
+gb_cpu_sm83 = { workspace = true }
+gb_cartridge = { workspace = true }
+gb_shared = { workspace = true }
+log = { workspace = true }
+anyhow = { workspace = true }
