--- a/crates/cpu_sm83/Cargo.toml
+++ b/crates/cpu_sm83/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 log = { workspace = true }
 gb_shared = { workspace = true }
+
+[dev-dependencies]
+mockall = "0.12.0"
