--- a/crates/cpu_sm83/Cargo.toml
+++ b/crates/cpu_sm83/Cargo.toml
@@ -10,4 +10,4 @@ log = { workspace = true }
 gb_shared = { workspace = true }
 
 [dev-dependencies]
-mockall = "0.12.0"
+mockall = { workspace = true }
