--- a/bin/gb_app/Cargo.toml
+++ b/bin/gb_app/Cargo.toml
@@ -7,9 +7,21 @@ edition = "2021"
 
 [dependencies]
 gb = { workspace = true }
+gb_shared = { workspace = true }
 log = { workspace = true }
 anyhow = { workspace = true }
 env_logger = "0.9.1"
+pixels = "0.13.0"
+winit = { version = "0.29.4", default-features = false, features = [
+  "rwh_05",
+  "x11",
+  "wayland",
+  "wayland-dlopen",
+  "wayland-csd-adwaita",
+] }
+winit_input_helper = "0.15.1"
+left-right = "0.11.5"
+chrono = "0.4.31"
 
 [[bin]]
 name = "gb"
