--- a/bin/gb_dmg/Cargo.toml
+++ b/bin/gb_dmg/Cargo.toml
@@ -22,6 +22,9 @@ winit = { version = "0.29.4", default-features = false, features = [
 winit_input_helper = "0.15.1"
 left-right = "0.11.5"
 chrono = "0.4.31"
+# use xinput for fixing no events on Windows
+# https://gitlab.com/gilrs-project/gilrs/-/issues/136
+gilrs = { version = "0.10.4", default-features = false, features = ["xinput"] }
 
 [[bin]]
 name = "gb"
