chore: init apu crate

--- a/crates/gb/Cargo.toml
+++ b/crates/gb/Cargo.toml
@@ -12,6 +12,7 @@ gb_cartridge = { workspace = true }
 gb_shared = { workspace = true }
 log = { workspace = true }
 anyhow = { workspace = true }
+cpal = "0.15.2"
 
 [dev-dependencies]
 mockall = { workspace = true }
