--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
   "crates/shared",
   "crates/ppu",
   "bin/gb_dmg",
+  "crates/apu",
 ]
 resolver = "2"
 
@@ -13,8 +14,9 @@ resolver = "2"
 gb_cpu_sm83 = { path = "crates/cpu_sm83" }
 gb_cartridge = { path = "crates/cartridge" }
 gb_ppu = { path = "crates/ppu" }
+gb_apu = { path = "crates/apu" }
 gb_shared = { path = "crates/shared" }
 gb = { path = "crates/gb" }
-log = "0.4.17"
+log = { version = "0.4.17", features = ["release_max_level_info"] }
 anyhow = "1.0.66"
 mockall = "0.12.0"
