feat: rewrite blip_buf in Rust

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
   "crates/ppu",
   "bin/gb_dmg",
   "crates/apu",
+  "crates/blip_buf",
 ]
 resolver = "2"
 
@@ -17,6 +18,7 @@ gb_ppu = { path = "crates/ppu" }
 gb_apu = { path = "crates/apu" }
 gb_shared = { path = "crates/shared" }
 gb = { path = "crates/gb" }
+blip_buf = { path = "crates/blip_buf" }
 log = { version = "0.4.17", features = ["release_max_level_info"] }
 anyhow = "1.0.66"
 mockall = "0.12.0"
