chore: init wasm app

--- a/crates/gb/Cargo.toml
+++ b/crates/gb/Cargo.toml
@@ -14,3 +14,8 @@ anyhow = { workspace = true }
 
 [dev-dependencies]
 mockall = { workspace = true }
+
+[features]
+default = []
+native = []
+wasm = []
