--- a/bin/gb_dmg/Cargo.toml
+++ b/bin/gb_dmg/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gb = { workspace = true }
+gb = { workspace = true, features = ["native"] }
 gb_shared = { workspace = true }
 log = { workspace = true }
 anyhow = { workspace = true }
