feat: integrate state management with zustand

--- a/app/gb_wasm/package.json
+++ b/app/gb_wasm/package.json
@@ -11,8 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "immer": "^10.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^18.19.26",
