--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ log = { version = "0.4.17", features = ["release_max_level_info"] }
 anyhow = "1.0.66"
 mockall = "0.12.0"
 web-time = "1.1.0"
+wasm-bindgen = "0.2.92"
