--- a/app/gb_wasm/Cargo.toml
+++ b/app/gb_wasm/Cargo.toml
@@ -10,8 +10,9 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-wasm-bindgen = "0.2.92"
-gb = { path = "../../crates/gb", features = ["wasm"] }
+wasm-bindgen = { workspace = true }
+gb = { workspace = true, features = ["wasm"] }
+gb_shared = { workspace = true }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
