--- a/app/gb_wasm/package.json
+++ b/app/gb_wasm/package.json
@@ -14,6 +14,7 @@
     "immer": "^10.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rxjs": "^7.8.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
