--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -3,3 +3,6 @@ name = "gb_shared"
 version = "0.1.0"
 edition = "2021"
 rust-version = "1.67.0"
+
+[target.'cfg(target_family = "wasm")'.dependencies]
+wasm-bindgen = { workspace = true }
