--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,7 @@ anyhow = "1.0.66"
 mockall = "0.12.0"
 web-time = "1.1.0"
 wasm-bindgen = "0.2.92"
+
+[profile.release]
+# Tell `rustc` to optimize for small code size.
+opt-level = "s"
