--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ gb_ppu = { path = "crates/ppu" }
 gb_apu = { path = "crates/apu" }
 gb_shared = { path = "crates/shared" }
 gb = { path = "crates/gb" }
-log = { version = "0.4.17", features = ["release_max_level_info"] }
+log = { version = "0.4.17" }
 anyhow = "1.0.66"
 mockall = "0.12.0"
 web-time = "1.1.0"
