--- a/app/gb_wasm/Cargo.toml
+++ b/app/gb_wasm/Cargo.toml
@@ -35,6 +35,7 @@ web-sys = { version = "0.3.69", features = [
 ] }
 anyhow = "1.0.81"
 wasm-bindgen-futures = "0.4.42"
+cpal = { version = "0.15.3", features = ["wasm-bindgen"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
