--- a/app/gb_wasm/Cargo.toml
+++ b/app/gb_wasm/Cargo.toml
@@ -32,6 +32,7 @@ web-sys = { version = "0.3.69", features = [
   "Performance",
   "WorkerGlobalScope",
   "DedicatedWorkerGlobalScope",
+  "MessagePort",
 ] }
 anyhow = "1.0.81"
 wasm-bindgen-futures = "0.4.42"
