--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "vite-wasm",
+  "name": "vite-react-ts",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev:web": "vite",
-    "dev:wasm": "wasm-pack build --dev --out-dir gb_wasm_bindings --target bundler --mode no-install",
-    "build:web": "tsc && vite build --emptyOutDir",
-    "build:wasm": "wasm-pack build --release --out-dir gb_wasm_bindings --target bundler --mode no-install",
+    "dev": "vite",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gb-wasm": "link:../../crates/gb-wasm/npm",
     "immer": "^10.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rxjs": "^7.8.1",
+    "tailwind-merge": "^1.14.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@types/node": "^18.19.26",
-    "@types/react": "^18.2.69",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "eslint-plugin-nomyfan": "^0.1.2",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3",
     "vite": "^5.2.6",
     "vite-plugin-wasm": "^3.3.0"
