--- a/crates/gb-wasm/Cargo.toml
+++ b/crates/gb-wasm/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gb_wasm"
+name = "gb-wasm"
 version = "0.1.0"
 edition = "2021"
 
@@ -36,7 +36,6 @@ web-sys = { version = "0.3.69", features = [
 ] }
 anyhow = "1.0.81"
 wasm-bindgen-futures = "0.4.42"
-cpal = { version = "0.15.3", features = ["wasm-bindgen"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
