--- a/crates/gb-wasm/Cargo.toml
+++ b/crates/gb-wasm/Cargo.toml
@@ -33,6 +33,8 @@ web-sys = { version = "0.3.69", features = [
   "WorkerGlobalScope",
   "DedicatedWorkerGlobalScope",
   "MessagePort",
+  "WritableStream",
+  "WritableStreamDefaultWriter",
 ] }
 anyhow = "1.0.81"
 wasm-bindgen-futures = "0.4.42"
