--- a/crates/gb-wasm/justfile
+++ b/crates/gb-wasm/justfile
@@ -1,2 +1,4 @@
 build:
   wasm-pack build --release --out-dir npm --target bundler --mode no-install
+build-dev:
+  wasm-pack build --dev --out-dir npm --target bundler --mode no-install
