--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -28,8 +28,7 @@
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3",
-    "vite": "^5.2.6",
-    "vite-plugin-wasm": "^3.3.0"
+    "vite": "^5.2.6"
   },
   "packageManager": "pnpm@8.15.5+sha256.4b4efa12490e5055d59b9b9fc9438b7d581a6b7af3b5675eb5c5f447cee1a589"
 }
