--- a/crates/gb-wasm/Cargo.toml
+++ b/crates/gb-wasm/Cargo.toml
@@ -26,6 +26,7 @@ web-sys = { version = "0.3.69", features = [
   "Performance",
   "WritableStream",
   "WritableStreamDefaultWriter",
+  "ImageData",
 ] }
 anyhow = "1.0.81"
 wasm-bindgen-futures = "0.4.42"
