--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ members = [
   "crates/cartridge",
   "crates/shared",
   "crates/ppu",
-  "bin/gb_dmg",
   "crates/apu",
+  "crates/gb-wasm",
 ]
 resolver = "2"
 
@@ -17,6 +17,12 @@ gb_ppu = { path = "crates/ppu" }
 gb_apu = { path = "crates/apu" }
 gb_shared = { path = "crates/shared" }
 gb = { path = "crates/gb" }
-log = { version = "0.4.17", features = ["release_max_level_info"] }
+log = { version = "0.4.17" }
 anyhow = "1.0.66"
 mockall = "0.12.0"
+web-time = "1.1.0"
+wasm-bindgen = "0.2.92"
+
+[profile.release]
+# Tell `rustc` to optimize for small code size.
+opt-level = "s"
