--- a/crates/gb/Cargo.toml
+++ b/crates/gb/Cargo.toml
@@ -3,8 +3,6 @@ name = "gb"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 gb_apu = { workspace = true }
 gb_ppu = { workspace = true }
@@ -13,6 +11,7 @@ gb_cartridge = { workspace = true }
 gb_shared = { workspace = true }
 log = { workspace = true }
 anyhow = { workspace = true }
+web-time = { workspace = true }
 
 [dev-dependencies]
 mockall = { workspace = true }
