--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ anyhow = "1.0.81"
 mockall = "0.12.1"
 web-time = "1.1.0"
 wasm-bindgen = "0.2.92"
+bincode = "1.3.3"
+serde = { version = "1.0", features = ["derive"] }
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
