--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
     "@vanilla-extract/css": "^1.14.2",
     "clsx": "^2.1.0",
     "gb-wasm": "link:../../crates/gb-wasm/npm",
