--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -14,6 +14,7 @@
     "@vanilla-extract/css": "^1.14.2",
     "clsx": "^2.1.0",
     "gb-wasm": "link:../../crates/gb-wasm/npm",
+    "hash-wasm": "^4.11.0",
     "immer": "^10.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
