--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -18,6 +18,7 @@
     "immer": "^10.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-spinners": "^0.13.8",
     "react-use": "^17.5.0",
     "rxjs": "^7.8.1",
     "zustand": "^4.5.2"
