--- a/app/gameboy/tsconfig.json
+++ b/app/gameboy/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2015",
     "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": ["DOM", "DOM.Iterable", "ESNext", "DOM.AsyncIterable"],
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": false,
