--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@vanilla-extract/css": "^1.14.2",
@@ -34,7 +35,8 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "typescript": "^5.4.3",
-    "vite": "^5.2.6"
+    "vite": "^5.2.6",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "packageManager": "pnpm@8.15.6"
 }
