--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "vite-react-ts",
+  "name": "gameboy",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "packageManager": "pnpm@8.15.6",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -37,6 +38,5 @@
     "typescript": "^5.4.3",
     "vite": "^5.2.6",
     "vite-plugin-svgr": "^4.2.0"
-  },
-  "packageManager": "pnpm@8.15.6"
+  }
 }
