--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -8,8 +8,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "precommit": "npm run lint",
-    "lint": "eslint --ext .ts,.tsx src"
+    "precommit": "npx lint-staged"
   },
   "dependencies": {
     "@radix-ui/react-context-menu": "^2.1.5",
@@ -17,7 +16,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@vanilla-extract/css": "^1.14.2",
     "clsx": "^2.1.0",
-    "gb-wasm": "link:../../crates/gb-wasm/npm",
+    "gb-wasm": "workspace:*",
     "hash-wasm": "^4.11.0",
     "immer": "^10.0.4",
     "react": "^18.2.0",
@@ -35,10 +34,16 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "eslint-plugin-nomyfan": "^0.1.2",
+    "lint-staged": "^15.2.2",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "typescript": "^5.4.3",
     "vite": "^5.2.6",
     "vite-plugin-svgr": "^4.2.0"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint --fix"
+    ]
   }
 }
