--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -26,6 +26,7 @@
     "react-spinners": "^0.13.8",
     "react-use": "^17.5.0",
     "rxjs": "^7.8.1",
+    "swr": "^2.2.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
