--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -11,6 +11,7 @@
     "precommit": "npx lint-staged"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
