--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -43,7 +43,8 @@
     "prettier": "^3.2.5",
     "typescript": "^5.4.3",
     "vite": "^5.2.6",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
