--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "precommit": "npx lint-staged"
+    "precommit": "npx lint-staged",
+    "lint": "eslint ./src --ext .ts,.tsx"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
