--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -18,7 +18,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@vanilla-extract/css": "^1.14.2",
     "dexie": "^4.0.4",
-    "gb-wasm": "workspace:*",
+    "gb-wasm": "link:../../crates/gb-wasm/npm",
     "hash-wasm": "^4.11.0",
     "immer": "^10.0.4",
     "react": "^18.2.0",
