--- a/crates/gb-wasm/Cargo.toml
+++ b/crates/gb-wasm/Cargo.toml
@@ -30,7 +30,7 @@ web-sys = { version = "0.3.69", features = [
   "ImageEncodeOptions",
   "Blob",
 ] }
-anyhow = "1.0.82"
+anyhow = { workspace = true }
 wasm-bindgen-futures = "0.4.42"
 cpal = { version = "0.15.3", features = ["wasm-bindgen"] }
 
