--- a/crates/gb-wasm/Cargo.toml
+++ b/crates/gb-wasm/Cargo.toml
@@ -29,6 +29,8 @@ web-sys = { version = "0.3.69", features = [
   "OffscreenCanvasRenderingContext2d",
   "ImageEncodeOptions",
   "Blob",
+  "WritableStream",
+  "WritableStreamDefaultWriter",
 ] }
 anyhow = { workspace = true }
 wasm-bindgen-futures = "0.4.42"
