--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
 
     steps:
       - name: Comment deploy start
-        if: ${{ github.event.workflow_run.event != 'push' }}
+        if: github.event_name == 'pull_request' && github.event.pull_request.state == 'open' && github.event.pull_request.merged == false
         uses: mshick/add-pr-comment@v2
         with:
           message-id: cloudflare-deploy
@@ -91,7 +91,7 @@ jobs:
 
       - name: Comment deploy URL
         uses: mshick/add-pr-comment@v2
-        if: ${{ github.event.workflow_run.event != 'push' }}
+        if: github.event_name == 'pull_request' && github.event.pull_request.state == 'open' && github.event.pull_request.merged == false
         with:
           message-id: cloudflare-deploy
           message: |
