--- a/crates/gb-wasm/Cargo.toml
+++ b/crates/gb-wasm/Cargo.toml
@@ -29,10 +29,11 @@ web-sys = { version = "0.3.69", features = [
   "OffscreenCanvasRenderingContext2d",
   "ImageEncodeOptions",
   "Blob",
+  "WritableStream",
+  "WritableStreamDefaultWriter",
 ] }
 anyhow = { workspace = true }
 wasm-bindgen-futures = "0.4.42"
-cpal = { version = "0.15.3", features = ["wasm-bindgen"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.42"
