chore: build pwa

--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -41,6 +41,7 @@
     "prettier": "^3.2.5",
     "typescript": "^5.4.3",
     "vite": "^5.2.6",
+    "vite-plugin-pwa": "^0.19.8",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.3.2"
   },
@@ -48,5 +49,9 @@
     "src/**/*.{ts,tsx}": [
       "eslint --fix"
     ]
+  },
+  "optionalDependencies": {
+    "sharp": "^0.33.3",
+    "sharp-ico": "^0.1.5"
   }
 }
