--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -43,7 +43,8 @@
     "vite": "^5.2.6",
     "vite-plugin-pwa": "^0.19.8",
     "vite-plugin-svgr": "^4.2.0",
-    "vite-tsconfig-paths": "^4.3.2"
+    "vite-tsconfig-paths": "^4.3.2",
+    "workbox-window": "^7.1.0"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
