chore(ci): fix syntax

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,10 @@ jobs:
       pull-requests: write
     env:
       BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
-      WITH_DEPLOY: ${{ !startsWith(env.BRANCH_NAME, 'renovate/') }} && ${{ !startsWith(env.BRANCH_NAME, 'chore/') }}
 
     steps:
       - name: Comment deploy start
-        if: ${{ env.WITH_DEPLOY }} && github.event_name == 'pull_request' && github.event.pull_request.state == 'open' && github.event.pull_request.merged == false
+        if: ${{ !startsWith(env.BRANCH_NAME, 'renovate/') && !startsWith(env.BRANCH_NAME, 'chore/') && github.event_name == 'pull_request' && github.event.pull_request.state == 'open' && github.event.pull_request.merged == false }}
         uses: mshick/add-pr-comment@v2
         with:
           message-id: cloudflare-deploy
@@ -94,7 +93,7 @@ jobs:
 
       - name: Publish to Cloudflare Pages
         uses: cloudflare/pages-action@v1
-        if: ${{ env.WITH_DEPLOY }}
+        if: ${{  !startsWith(env.BRANCH_NAME, 'renovate/') && !startsWith(env.BRANCH_NAME, 'chore/') }}
         id: cloudflare-publish
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
@@ -107,7 +106,7 @@ jobs:
 
       - name: Comment deploy URL
         uses: mshick/add-pr-comment@v2
-        if: ${{ env.WITH_DEPLOY }} && github.event_name == 'pull_request' && github.event.pull_request.state == 'open' && github.event.pull_request.merged == false
+        if: ${{ !startsWith(env.BRANCH_NAME, 'renovate/') && !startsWith(env.BRANCH_NAME, 'chore/') && github.event_name == 'pull_request' && github.event.pull_request.state == 'open' && github.event.pull_request.merged == false }}
         with:
           message-id: cloudflare-deploy
           message: |
