--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
 
     steps:
       - name: Comment deploy start
-        if: ${{ !startsWith(env.BRANCH_NAME, 'renovate/') && !startsWith(env.BRANCH_NAME, 'chore/') && github.event_name == 'pull_request' && github.event.pull_request.state == 'open' && github.event.pull_request.merged == false }}
+        if: ${{ !startsWith(env.BRANCH_NAME, 'renovate/') && github.event_name == 'pull_request' && github.event.pull_request.state == 'open' && github.event.pull_request.merged == false }}
         uses: mshick/add-pr-comment@v2
         with:
           message-id: cloudflare-deploy
@@ -109,7 +109,7 @@ jobs:
 
       - name: Publish to Cloudflare Pages
         uses: cloudflare/pages-action@v1
-        if: ${{  !startsWith(env.BRANCH_NAME, 'renovate/') && !startsWith(env.BRANCH_NAME, 'chore/') }}
+        if: ${{ !startsWith(env.BRANCH_NAME, 'renovate/') }}
         id: cloudflare-publish
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
@@ -122,7 +122,7 @@ jobs:
 
       - name: Comment deploy URL
         uses: mshick/add-pr-comment@v2
-        if: ${{ !startsWith(env.BRANCH_NAME, 'renovate/') && !startsWith(env.BRANCH_NAME, 'chore/') && github.event_name == 'pull_request' && github.event.pull_request.state == 'open' && github.event.pull_request.merged == false }}
+        if: ${{ !startsWith(env.BRANCH_NAME, 'renovate/') && github.event_name == 'pull_request' && github.event.pull_request.state == 'open' && github.event.pull_request.merged == false }}
         with:
           message-id: cloudflare-deploy
           message: |
