--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,14 @@ members = [
   "crates/ppu",
   "crates/apu",
   "crates/gb-wasm",
+  "crates/gb_console_log",
 ]
 resolver = "2"
 
 [workspace.dependencies]
 gb_cpu_sm83 = { path = "crates/cpu_sm83" }
 gb_cartridge = { path = "crates/cartridge" }
+gb_console_log = { path = "crates/gb_console_log" }
 gb_ppu = { path = "crates/ppu" }
 gb_apu = { path = "crates/apu" }
 gb_shared = { path = "crates/shared" }
@@ -24,6 +26,7 @@ web-time = "1.1.0"
 wasm-bindgen = "0.2.92"
 bincode = "1.3.3"
 serde = { version = "1.0", features = ["derive"] }
+web-sys = { version = "0.3.69" }
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
