--- a/crates/gb-wasm/Cargo.toml
+++ b/crates/gb-wasm/Cargo.toml
@@ -13,13 +13,14 @@ default = ["console_error_panic_hook"]
 wasm-bindgen = { workspace = true }
 gb = { workspace = true }
 gb_shared = { workspace = true }
+gb_console_log = { workspace = true }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
-web-sys = { version = "0.3.69", features = [
+web-sys = { workspace = true, features = [
   "console",
   "HtmlCanvasElement",
   "CanvasRenderingContext2d",
