--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,9 @@ jobs:
       - name: Setup rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
+          toolchain: "1.78.0"
           targets: "wasm32-unknown-unknown,x86_64-unknown-linux-gnu"
+          components: "clippy"
 
       - uses: Swatinem/rust-cache@v2
 
